--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.4",
+    "ag-grid": "12.0.x",
+    "ag-grid-angular": "12.0.x"
   },
   "devDependencies": {
     "@angular/cli": "1.2.0",
